--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
-    "eslint": "^8.44.0"
+    "eslint": "^8.44.0",
+    "prettier-plugin-tailwindcss": "^0.3.0"
   }
 }
